feat: 新增驗證使用者功能
驗證 token 是否正確或過期
